syntax = "proto3";
package protos;
option go_package = "../protos/bin";

message Person{
  string id=1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message PersonCreatedResponse{
  string id = 1;
  string response = 2;
}

message PersonRequest{
  string id = 1;
}

message DeletePersonRequest{
  string id = 1;
}

message DeletePersonResponse{
  string id = 1;
  string status = 2;
}

service PersonService{

  rpc Create(Person) returns (PersonCreatedResponse) {}
  rpc Get(PersonRequest) returns (Person) {}
  rpc Delete(DeletePersonRequest) returns (DeletePersonResponse) {}
}
